--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Baby Weight – Kalman Filter</title>
+  <title>Baby Weight</title>
   <style>
     :root {
       --bg: #0b0f14;
@@ -74,7 +74,7 @@
 <body>
   <header>
     <h1>Baby Weight – Kalman Filter</h1>
-    <p>Import CSV (datetime, weight[g]). Estimate true weight with growth + mean-reverting bias.</p>
+    <p>Import CSV in Huckleberry export format. Estimate true weight using a Kalman filter.</p>
   </header>
 
   <div class="wrap">
